--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.google.code.morphia</groupId>
     <artifactId>morphia</artifactId>
     <packaging>jar</packaging>
-    <version>0.94-SNAPSHOT</version>
+    <version>0.94</version>
     <name>morphia</name>
     
     <url>http://code.google.com/p/morphia/</url>
@@ -159,18 +159,16 @@
 			</plugin>
 		</plugins>
 	</reporting>
-
-    <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>morphia-googlecode</id>
-            <url>svn:https://morphia.googlecode.com/svn/mavenrepo</url>
-        </repository>
-        <snapshotRepository>
-            <uniqueVersion>true</uniqueVersion>
-            <id>morphia-googlecode</id>
-            <url>svn:https://morphia.googlecode.com/svn/mavenrepo</url>
-        </snapshotRepository>
+  
+   <distributionManagement>
+      <repository>
+        <id>nexus</id>
+        <url>http://10.241.12.38:8080/nexus/content/repositories/releases/</url>
+      </repository>
+      <snapshotRepository>
+        <id>nexus</id>
+        <url>http://10.241.12.38:8080/nexus/content/repositories/snapshots/</url>
+      </snapshotRepository>
     </distributionManagement>
 
 </project>
