--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.google.code.morphia</groupId>
     <artifactId>morphia</artifactId>
     <packaging>jar</packaging>
-    <version>0.95</version>
+    <version>0.95_p1</version>
     <name>morphia</name>
     
     <url>http://code.google.com/p/morphia/</url>
